2004/01/16 00:08 (-0500) muppetman

	* README: unstable release 1.030

2004/01/16 00:02 (-0500) muppetman

	A GUtils.xs
	* MANIFEST, Makefile.PL, Glib.xs: add GUtils.xs, with version information
	functions.

	* ParseXSDoc.pm: don't complain about empty argument lists -- they are
	legal on pure functions.

	* AUTHORS: updated.

2004/01/15 22:08 (-0500) muppetman

	* Glib.xs, Glib.pm: restore the prototypes on filename_to_unicode and
	filename_from_unicode, to allow proper support for the function and static
	method calling conventions.  thanks to cxreg in irc for reminding me that
	it would work.
		also add initial implementations of filename_to_uri and
	filename_from_uri, also callable as pure functions and class methods.
	as currently implemented, there are issues with utf8 handling, but i don't
	quite know how to resolve them.
		make Glib be a full Exporter, so we can add these pure functions
	to @EXPORT_OK and %EXPORT_TAGS.
		update the docs accordingly.

2004/01/15 14:31 (-0500) muppetman

	* GenPod.pm: name mapping for GPerlFilename_const

	* gperl.h, typemap: add typedef and input typemap for
	GPerlFilename_ornull

	* GType.xs, gperl_marshal.h, t/7.t, t/8.t: preserve $@ across
	closure invocations.

	* GSignal.xs: add words of warning to documentation

2004/01/14 10:59 (-0500) rwmcfa1

	* GObject.xs: added pod documentation for tie_properties

2004/01/14 00:21 (-0500) muppetman

	* GBoxed.xs, GType.xs, GValue.xs: more spots where we should use
	GINT_TO_POINTER and friends

	* t/9.t, t/a.t: skip tests that exercise glib bugs on x86_64; we
	need version API in the bindings to do this correctly.

2004/01/13 22:41 (-0500) muppetman

	* AUTHORS, Glib.xs, GObject.xs, GType.xs, typemap: applied
	patch (with extra fuzz) from Jacek Konieczny <jajcus at bnet dot pl>
	to clean up warnings on 64-bit platforms.

2004/01/13 22:20 (-0500) muppetman

	* ParseXSDoc.pm: support continuation lines in xsubs.  this borks line