@@ -133,6 +133,18 @@ WriteMakefile(
     $glib ? $glib->get_makefile_vars : (),
 );
 
+print "
+WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING 
+
+   This is an unstable development release of Glib.  The API is not
+   frozen and things are subject to change at any time.  Report any
+   bugs to gtk-perl-list AT gnome DOT org as soon as possible.
+   Please use the 1.02x series for important work.
+
+WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING 
+
+";
+
 package MY;
 
 # rule to build the documentation
