@@ -1,6 +1,8 @@
-2004/01/16 00:08 (-0500) muppetman
+2004/01/16 00:23 (-0500) muppetman
 
 	* README: unstable release 1.030
+
+	* README, Makefile.PL: add emphasis of the unstable nature of this series.
 
 2004/01/16 00:02 (-0500) muppetman
 
